--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
     "seed": "node ace db:seed",
     "migrate-and-serve": "node ace migration:run && node ace db:seed && node ace serve --watch",
     "lint": "eslint . --ext=.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "node -r @adonisjs/assembler/build/register japaFile.ts"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.5",
+    "@types/jsdom": "^16.2.14",
+    "@types/supertest": "^2.0.11",
     "adonis-preset-ts": "^2.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-adonis": "^1.3.3",
     "eslint-plugin-prettier": "^3.4.1",
+    "execa": "^5.1.1",
+    "get-port": "^5.1.1",
+    "japa": "^4.0.0",
+    "jsdom": "^19.0.0",
     "pino-pretty": "^6.0.0",
     "prettier": "^2.3.2",
+    "supertest": "^6.2.2",
     "typescript": "^4.2.4",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
