--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,8 @@ jobs:
           
       - name: Install dependencies
         run: npm install
+      - name: Install missing peer dependency
+        run: npm install --save reflect-metadata
         
       - name: Build application
         run: npm run build
