--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,11 @@
-# This is a basic workflow to help you get started with Actions
+name: Continuous Integration
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 env:
@@ -26,8 +21,6 @@ env:
   APP_KEY: _9E_D2KJtq5sEn64BvznsPLAMKi2f6jZ
   DB_CONNECTION: pg
 
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -40,13 +33,11 @@ jobs:
         with: 
           node-version: "14.x"
         
-      - uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: install
-          
-      - uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: build
+      - name: Install packages
+        run: npm install
+
+      - name: Build Adonis application
+        run: npm run build
       
       - name: Run migration
         run: node build/ace migration:run
@@ -54,9 +45,8 @@ jobs:
       - name: Run seeder
         run: node build/ace db:seed
         
-      - uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: test
+      - name: Run tests
+        run: npm run test
   
       - name: Lint codebase
         uses: github/super-linter/slim@v4
