--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "test": "node -r @adonisjs/assembler/build/register japaFile.ts"
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^5.3.5",
-    "@types/jsdom": "^16.2.14",
-    "@types/supertest": "^2.0.11",
+    "@adonisjs/assembler": "^5.9.5",
+    "@types/jsdom": "^16.2.15",
+    "@types/supertest": "^2.0.12",
     "adonis-preset-ts": "^2.1.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-adonis": "^1.3.3",
     "eslint-plugin-prettier": "^3.4.1",
     "execa": "^5.1.1",
@@ -27,22 +27,26 @@
     "japa": "^4.0.0",
     "jsdom": "^19.0.0",
     "pino-pretty": "^6.0.0",
-    "prettier": "^2.3.2",
-    "supertest": "^6.2.2",
-    "typescript": "^4.2.4",
+    "prettier": "^2.8.1",
+    "supertest": "^6.3.3",
+    "typescript": "^4.9.4",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
   },
   "dependencies": {
-    "@adonisjs/auth": "^8.0.7",
-    "@adonisjs/bouncer": "^2.2.4",
+    "@adonisjs/auth": "^8.2.3",
+    "@adonisjs/bouncer": "^2.3.0",
     "@adonisjs/core": "^5.1.11",
-    "@adonisjs/lucid": "^15.0.3",
-    "@adonisjs/repl": "^3.1.5",
-    "aws-sdk": "^2.973.0",
-    "luxon": "^2.0.2",
-    "pg": "^8.7.1",
-    "phc-argon2": "^1.1.2",
+    "@adonisjs/lucid": "^18.3.0",
+    "@adonisjs/repl": "^3.1.11",
+    "@sentry/node": "^7.29.0",
+    "@sentry/tracing": "^7.29.0",
+    "aws-sdk": "^2.1287.0",
+    "date-fns": "^2.29.3",
+    "luxon": "^2.5.0",
+    "nanoid": "^4.0.0",
+    "pg": "^8.8.0",
+    "phc-argon2": "^1.1.4",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
